eliminate deprecated explicit boxing
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@20302 b29ace70-8910-0410-8dcc-aa2fc6433167